renamed heroku url

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 						<li> If it does not contain a date or Unix timestamp, null is returned for those properties.</li>
 					</ol>					
 					<ul>
-						<li>Example usage: <br />https://timestamp-ms.herokuapp.com/December%2015,%202015 <br /> https://timestamp-ms.herokuapp.com/1450137600</li>
+						<li>Example usage: <br />https://timestamp-microservice-ls.herokuapp.com/December 15 2015 <br /> https://timestamp-microservice-ls.herokuapp.com/1450137600</li>
 						<li>Example output: <br />
 						{ "unix": 1450137600, "natural": "December 15, 2015" } </li>
 					</ul>	
